fix style issues on mobile

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -162,7 +162,9 @@ a {
   }
 
   &--blue {
-    background-image: linear-gradient(134deg, #005EFF 0%, #00A8FF 100%);
+    #app {
+      background-image: linear-gradient(134deg, #005EFF 0%, #00A8FF 100%);
+    }
 
     .btn {
       background-color: rgba(#000, .25);
@@ -174,7 +176,9 @@ a {
   }
 
   &--dark {
-    background-image: linear-gradient(134deg, #000B1E 0%, #011154 100%);
+    #app {
+      background-image: linear-gradient(134deg, #000B1E 0%, #011154 100%);
+    }
 
     .btn {
       background-color: rgba(#fff, .12);
@@ -188,8 +192,10 @@ a {
   &--sweet-pink {
     @extend .theme--blue;
 
-    background-color: #FAACA8;
-    background-image: linear-gradient(19deg, #FAACA8 0%, #DDD6F3 100%);
+    #app {
+      background-color: #FAACA8;
+      background-image: linear-gradient(19deg, #FAACA8 0%, #DDD6F3 100%);
+    }
   }
 }
 
